test/classes/errors/nilability-assign/assign-nonnil-shared-from-oknil-owned.good
assign-nonnil-shared-from-oknil-owned.chpl:8: error: cannot assign 'owned MyClass?' to a 'shared MyClass'
